Rewrite of rendering engine as to support alpha images.
- Rendering currently broken!
- Also take alpha chanel of image into account
- Add blend mode which clears to background colour first before blending
- Added initial AppleScript support
- Support "Lion" (Mac OS X 10.7) full screen API
- Compilation probably still fails on "Snow Leopard"!
- Added View menu entries for toggling visibility of side panel and
toolbar
- Note: toolbar visibility not reliable on "Lion" when switching between
  full screen and normal view (especially when enabling toolbar in
  full screen: the toolbar is invisible in normal view, even though the
  Qt API reports it to be visible!)

--- a/src/Screenie/Info.plist
+++ b/src/Screenie/Info.plist
@@ -7,13 +7,13 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
-	<string>@EXECUTABLE@ - A fancy screenshot composer</string>
+	<string>Screenie - A fancy screenshot composer</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
-	<string>@EXECUTABLE@</string>
+	<string>Screenie</string>
 	<key>CFBundleIdentifier</key>
-	<string>net.till-art.@EXECUTABLE@</string>
+	<string>net.till-art.Screenie</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
@@ -49,5 +49,9 @@
 	<string>@SHORT_VERSION@</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright 2011 Oliver Knoll, till-art.net</string>
+	<key>NSAppleScriptEnabled</key>
+	<true/>
+	<key>OSAScriptingDefinition</key>
+	<string>Screenie.sdef</string>
 </dict>
 </plist>
