--- a/src/Screenie/Info.plist
+++ b/src/Screenie/Info.plist
@@ -14,6 +14,8 @@
 	<string>Screenie</string>
 	<key>CFBundleIdentifier</key>
 	<string>net.till-art.Screenie</string>
+        <key>CFBundleName</key>
+        <string>Screenie</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
