Recent Files refactoring.
* Added initial implementation of Security Scoped Bookmarks (Mac)

--- a/src/Screenie/Info.plist
+++ b/src/Screenie/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundleExecutable</key>
         <string>@EXECUTABLE@</string>
 	<key>CFBundleIdentifier</key>
-        <string>net.tillart.@EXECUTABLE@</string>
+        <string>net.till-art.@EXECUTABLE@</string>
 	<key>CFBundleName</key>
         <string>@EXECUTABLE@</string>
 	<key>CFBundleDocumentTypes</key>
